fix: 컴파일러 경고 제거 및 deprecated API 업데이트
테스트 및 빌드 시 발생하는 Java 컴파일러 경고를 모두 제거함.

수정 내역:
- platform: JSR-305 의존성 추가 (javax.annotation.meta.When 누락 해결)
- platform: TriggerDescriptor에서 Duration 기반 API로 변경 (Spring 6.0)
- platform: CurrentUserTest deprecated 생성자에 @SuppressWarnings("removal")
- audit: HttpSiemForwarder TypeReference 사용으로 unchecked 해결
- audit: HttpSiemForwarderRequestFactoryTest URI.create().toURL() 사용
- auth: JwtTokenProvider unchecked 경고 억제
- server: SensitiveApiFilter, OrganizationExportController unchecked 억제
- dw-ingestion-core: jakarta.persistence 의존성 추가
- 다수 테스트 파일: @SuppressWarnings("unchecked") 추가

영향 모듈: platform, audit, auth, draft, file-core, batch,
          data-integration, dw-ingestion-core, server